Add OSV_SDK. This is needed for implementing on_termination_request() inside click, which adjusts the runcount to -1. Maybe DPDK support is now broken on Linux.

--- a/config-userlevel.h.in
+++ b/config-userlevel.h.in
@@ -217,6 +217,9 @@
 /* Define if a Click user-level driver uses Intel DPDK. */
 #undef HAVE_DPDK
 
+/* Define if a Click user-level driver uses OSv. */
+#undef HAVE_OSV
+
 /* Define if Click should use Valgrind client requests. */
 #undef HAVE_VALGRIND
 
