--- a/configure.in
+++ b/configure.in
@@ -136,6 +136,17 @@ if echo "$enable_select" | grep kqueue >/dev/null 2>&1 && test "$enable_kqueue" 
     AC_DEFINE([HAVE_ALLOW_KQUEUE], [1], [Define if kqueue() may be used to wait for file descriptor events.])
 fi
 
+
+AC_ARG_ENABLE([osv],
+    [AS_HELP_STRING([  --enable-osv], [Compile for OSv])],
+    [:], [enable_osv=no])
+
+if test "x$enable_osv" = xyes; then
+    AC_SUBST(OSV_SDK)
+    AC_DEFINE([HAVE_OSV])
+    AC_SUBST(USE_OSV, yes)
+fi
+
 AC_ARG_ENABLE([dpdk],
     [AS_HELP_STRING([  --enable-dpdk], [use Intel DPDK])],
     [:], [enable_dpdk=no])
@@ -158,15 +169,15 @@ Define \$RTE_SDK and \$RTE_TARGET as per Intel DPDK documentation.
 
 =========================================])
     fi
-    if test ! -f "$RTE_SDK/$RTE_TARGET/lib/librte_eal.a"; then
-        AC_MSG_ERROR([
-=========================================
-
-Cannot find \$RTE_SDK/\$RTE_TARGET/lib/librte_eal.a for Intel DPDK.
-Define \$RTE_SDK and \$RTE_TARGET as per Intel DPDK documentation.
-
-=========================================])
-    fi
+#    if test ! -f "$RTE_SDK/$RTE_TARGET/lib/librte_eal.a"; then
+#        AC_MSG_ERROR([
+#=========================================
+#
+#Cannot find \$RTE_SDK/\$RTE_TARGET/lib/librte_eal.a for Intel DPDK.
+#Define \$RTE_SDK and \$RTE_TARGET as per Intel DPDK documentation.
+#
+#=========================================])
+#    fi
     rte_ver_major=`grep "#define RTE_VER_MAJOR" "$RTE_SDK/$RTE_TARGET/include/rte_version.h" | head -n 1 | awk '{print $3}'`
     rte_ver_minor=`grep "#define RTE_VER_MINOR" "$RTE_SDK/$RTE_TARGET/include/rte_version.h" | head -n 1 | awk '{print $3}'`
     rte_ver_year=`grep "#define RTE_VER_YEAR" "$RTE_SDK/$RTE_TARGET/include/rte_version.h" | head -n 1 | awk '{print $3}'`
